--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Clé API de Gemini
 gemini.api.key=AIzaSyABoYmgv5aORJi7mUncQgbihalsu4Hu-3E
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
