--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,14 @@
-{"properties": [{
-  "name": "gemini.api.key",
-  "type": "java.lang.String",
-  "description": "A description for 'gemini.api.key'"
-}]}
+{
+  "properties": [
+    {
+      "name": "gemini.api.key",
+      "type": "java.lang.String",
+      "description": "A description for 'gemini.api.key'"
+    },
+    {
+      "name": "flask.api.url",
+      "type": "java.lang.String",
+      "description": "A description for 'flask.api.url'"
+    }
+  ]
+}
